@@ -13,7 +13,9 @@ my %RESPONSE_EVENT_NAME = (ping => 'pong', send => 'sent');
 
 sub start {
   my $self = shift->inactivity_timeout(INACTIVE_TIMEOUT);
-  return $self->_err('Need to log in first.', {method => 'handshake'})->finish(1008);
+  return $self->_err($self->param('err'), {method => 'handshake'})->finish(1008)
+    if $self->param('err');
+
   return $self->_err('Need to log in first.', {method => 'handshake'})->finish(1008)
     unless my $user = $self->backend->user;
 
@@ -62,6 +64,17 @@ sub _event_debug {
   my $id = $data->{id} || time;
   $self->log->warn('[ws] <<< ' . encode_json $data) if DEBUG;
   $self->send({json => {event => 'debug', id => $id}});
+}
+
+sub _event_load {
+  my ($self, $data) = @_;
+  my $id = $data->{id} || time;
+
+  $self->backend->user->get_p($data->{params} || {})->then(sub {
+    my $user = shift;
+    $user->{rtc} = $self->app->core->settings->rtc;
+    $self->send({json => {event => 'load', id => $id, user => $user}});
+  });
 }
 
 sub _event_ping {
